# advent-of-code-2023

./: adventofcode.cabal
app/cube/: Cube.hs
app/trebuchet/: Trebuchet.hs  Trebuchet2.hs  trebuchet.py
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
trebuchet/: trebuchet.hs  trebuchet2.hs
