cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dusan Tisma
maintainer:         tismadusan567@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventofcode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Trebuchet, Trebuchet2, Cube
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, containers, split
    hs-source-dirs:   app, app/trebuchet, app/cube
    default-language: Haskell2010
